force-app/main/default/objects/ampi__xx_Risk_Relationship__c/ampi__xx_Risk_Relationship__c.object-meta.xml
<CustomObject>
    <description>Capture and track various risk relationships by linking risks with other risks, framework objectives, and activities.</description>
    <label>Risk Relationship</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Risk Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>