force-app/main/default/objects/ampi__xx_Risk_Relationship__c/fields/ampi__xx_Activity__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship from the Risk Relationship object to the Activity object.</description>
    <label>Activity</label>
    <referenceTo>ampi__Activity__c</referenceTo>
    <relationshipLabel>Risk Relationships</relationshipLabel>
    <relationshipName>Risk_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>