force-app/main/default/objects/ampi__xx_Risk_Relationship__c/fields/ampi__xx_Contributing_Risk__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Contributing_Risk__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The primary lookup relationship to the Risk object from the Risk Relationship object.</description>
    <label>Contributing Risk</label>
    <referenceTo>ampi__Risk__c</referenceTo>
    <relationshipLabel>Risk Relationships</relationshipLabel>
    <relationshipName>Risk_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>