force-app/main/default/objects/ampi__xx_Risk_Relationship__c/fields/ampi__xx_Framework_Objective__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Framework_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship from the Risk Relationship object to the Framework Objective object.</description>
    <label>Framework Objective</label>
    <referenceTo>ampi__Objective__c</referenceTo>
    <relationshipLabel>Risk Relationships</relationshipLabel>
    <relationshipName>Risk_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>