force-app/main/default/objects/ampi__xx_Risk_Relationship__c/fields/ampi__xx_Risk_Contributed_To__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Risk_Contributed_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The secondary lookup relationship to the Risk object from the Risk Relationship object.</description>
    <label>Risk Contributed To</label>
    <referenceTo>ampi__Risk__c</referenceTo>
    <relationshipLabel>Risk Relationships (Contributing Risks)</relationshipLabel>
    <relationshipName>Risk_Contributed_To_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>